    that calls to debci-setup will always exit cleanly.
  * New program: debci localtest. It can be used by users to reproduce locally
    the same test environment used in ci.debian.net.
    - autopkgtest calls make by backends/*/test-package will now use the
      --no-built-binaries option.
  * Add debci(1) manpage and support `debci --help` (Closes: #867891)

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 23 Jul 2017 19:13:07 -0300

debci (1.6) unstable; urgency=medium

  * docs/INSTALL.md: update rabbitmq-related instructions
  * Debci::HTML: record template filename
  * Debci::Graph: assume empty array when there is no data
  * debci-expire: control data retention
  * Drop unnecessary symlinks to autopkgtest logs
  * web UI: don't link to removed files
  * debian/rules: skip running tests during build (Closes: #841708, #848054)
  * debci-worker.cron.daily: skip if debci-worker is not installed
    (Closes: #822896)
  * debian/*.service: add Documentation entry, pointing to online debci docs

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 28 May 2017 17:22:50 -0300

debci (1.5.1) unstable; urgency=medium

  [ Brandon Fairchild ]
  * TUTORIAL.md: Add links to DDPO and package tracker

  [ Antonio Terceiro ]
  * docs/TUTORIAL.md: add link to DMD as well
  * debci-setup-chdist:
    - use $MIRROR as default mirror
  * debci-generate-index:
    - handle sub-directories of the artifacts/ directory produced by
      autopkgtest.

  [ Paul Gevers ]
  * Simplify the instructions to enable sudo to work on lxc-* now that debci
    ships an sudoers.d/debci file

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 26 Jan 2017 10:27:45 -0200

debci (1.5) unstable; urgency=medium

  * debci setup
    - add -f/--force option to force an update, ignoring the testbed timestamp
  * web UI
    - fix links to packages in "status alerts" page
  * packaging:
    + debci-worker: move `apt-cacher-ng` from Recommends: to Suggests:. In